--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -1,9 +1,11 @@
-<!-- <h3>Parent Component</h3> -->
+<h3>Parent Component</h3>
 
 <label>Parent Component</label>
 <input type="text" #pcomponent (keyup)="0" />
 
 
 <p>Value of inputOne component is: {{CData}} </p>
+
+
 
 <app-input-one [PData]="pcomponent.value" (childEvent)="CData=$event"></app-input-one>
